# mailbackup

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  config.py  extractor.py  integrity.py  logger.py  mailbackup.example.toml  mailbackup.sh  manifest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rotation.py  uploader.py  utils.py
.github/: copilot-instructions.md
.github/workflows/: python-tests.yml
mailbackup/: __main__.py  config.py  db.py  executor.py  extractor.py  integrity.py  logger.py  manifest.py  orchestrator.py  rclone.py  rotation.py  statistics.py  uploader.py  utils.py
tests/: COVERAGE_PLAN.md  README.md  SUMMARY.md  TEST_STRUCTURE.md  __init__.py  conftest.py
tests/integration/: test_cli.py  test_comprehensive_coverage.py  test_executor.py  test_extractor.py  test_final_coverage.py  test_integrity.py  test_integrity_integration.py  test_interrupt_handling.py  test_manifest.py  test_pipeline.py  test_targeted_coverage.py  test_uploader.py  test_utils.py  test_utils_integration.py
tests/unit/: test_config.py  test_db.py  test_executor.py  test_extractor.py  test_integrity.py  test_logger.py  test_main.py  test_manifest.py  test_orchestrator.py  test_rclone.py  test_rotation.py  test_statistics.py  test_uploader.py  test_utils.py
